deploy/apply-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apply-deployment
  namespace: apply-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apply
  template:
    metadata:
      labels:
        app: apply
    spec:
      containers:
      - name: apply
        image: yeongchan321/emp_apply:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 300Mi
            cpu: "300m"
          limits:
            memory: 500Mi
            cpu: "500m"
