deploy/db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: db
  namespace: db-ns
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      run: db
  strategy: {}
  template:
    metadata:
      labels:
        run: db
    spec:
      containers:
      - image: mongo:4.2
        name: mongodb
        args: ["--dbpath","/data/db"]
        volumeMounts:
        - name: "mongo-data-dir"
          mountPath: "/data/db"
        resources:
          requests:
            memory: 300Mi
            cpu: "300m"
          limits:
            memory: 1Gi
            cpu: "1000m"
      volumes:
      - name: "mongo-data-dir"
        persistentVolumeClaim:
          claimName: "mongo-data"
