deploy/front-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: frontend-ns
spec:
  replicas: 4
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: codingalice/frontend-pod:3.0
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: 300Mi
            cpu: "300m"
          limits:
            memory: 1Gi
            cpu: "1000m"
