deploy/job-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-deployment
  namespace: job-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: job
  template:
    metadata:
      labels:
        app: job
    spec:
      containers:
      - name: job
        image: yeongchan321/emp_job:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 300Mi
            cpu: "300m"
          limits:
            memory: 500Mi
            cpu: "500m"
