deploy/member-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: member-deployment
  namespace: member-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: member
  template:
    metadata:
      labels:
        app: member
    spec:
      containers:
      - name: member
        image: yeongchan321/emp_member:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 300Mi
            cpu: "300m"
          limits:
            memory: 500Mi
            cpu: "500m"
