deploy/apply-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: apply-svc
  namespace: apply-ns
spec:
  selector:
    app: apply
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
