deploy/db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
  namespace: db-ns
  labels:
    run: db
spec:
  type: ClusterIP
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    run: db
