deploy/job-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: job-svc
  namespace: job-ns
spec:
  selector:
    app: job
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
