deploy/member-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: headless-to-member
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: member-svc.member-ns.svc.cluster.local
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
