deploy/member-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: member-svc
  namespace: member-ns
spec:
  selector:
    app: member
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
