deploy/job-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: job-ingress
  namespace: job-ns
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/job(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: job-svc
            port:
              number: 80
